added to my homepage

--- a/ballet/ballet-attire.html
+++ b/ballet/ballet-attire.html
@@ -17,21 +17,20 @@
                 <a href="index.html">Home</a>
                 <a href="ballet-attire.html">Ballet Attire</a>
                 <a href="ballet-terms.html">Ballet Terms</a>
-                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
                 <img id="hero-img" src="images/adult-ballet.jpg" alt="Adule Ballet">
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">You’ve probably heard it, maybe even said it yourself — </h1>
-                <h4>“ballet is the foundation of all dance forms.”</h4>
-                <p class="credit"> image credit: Saundi Wilson
-                    <br>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  
-                    <br>https://creativecommons.org/licenses/by-nc-sa/2.0/  
-                </p>
-            </section>
+            <figure id="hero-msg">
+                <h5 class="home-title">You’ve probably heard it, maybe even said it yourself — </h5>
+                <p class="firstletter">“ballet is the foundation of all dance forms.”</p>
+                <figcaption class="credit"> image credit: Saundi Wilson 
+                    <p class="credit">Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </p>
+                    <p class="credit">https://creativecommons.org/licenses/by-nc-sa/2.0/  </p>
+                </figcaption>
+            </figure>
         </div>
 
         <main class="home-grid">
@@ -40,17 +39,18 @@
                     <p>Ballet is all about discipline, grace, elegance and strength.To do that, evey ballet studio has its own rules. However, there are some common senses for the attire.
                     Subsequently, we will introduce how to wear comfortable, form-fitting clothing and proper shoes.
                     </p>
-                    <h1 class="firstletter">Wearing the Right Outfit</h1>
+                    <h1>Wearing the Right Outfit</h1>
                 </div>
             </section>
 
             <section class="dress">
-                <div class="dress-img">
+                <figure class="dress-img">
                     <img src="images/ballet-attire.png" alt="Ballet attire">
-                    <p class="credit">image credit: https://www.dance10.org/about/dress-code/ballet-classes/
-                        <br>Attribution-NonCommercial
-                    </p>
-                </div>
+                    <figcaption>
+                        <p class="credit">image credit: https://www.dance10.org/about/dress-code/ballet-classes </p>
+                        <p class="credit">Attribution-NonCommercial</p>
+                    </figcaption>
+                </figure>
                 <div class="dress-msg">
                     <h1>Ballet attire</h1>            
                     <p><span class="title">First, </span>you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
@@ -62,31 +62,35 @@
                 </div>
             </section>
             <section class="bun">
-                <div class="bun-img">
+                <figure class="bun-img">
                     <h2>How to tie a basic ballet bun</h2>
                     <img src="images/ballet-bun.png" alt="Ballet bun">
-                    <p class="credit">image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun
-                        <br>Attribution-NonCommercial
-                    </p>
-                </div>
+                    <figcaption>
+                        <p class="credit">image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun </p>
+                        <p class="credit">Attribution-NonCommercial</p>
+                    </figcaption>
+                </figure>
                 <div class="bun-msg">
-                    <p>A ballet bun is quite simple to do. With a little practice, you will get the perfect “cinnamon bun”.
-                    <span class="title">1. Brush your hair.</span>To start, get your hair free of tangles.
-                    <span class="title">2. Pull your hair back into a ponytail and secure with an elastic.</span>
-                    <span class="title">3. Twist the bun into a rope and wrap the rope in a circle around the elastic.</span>Wrap the rope around in a circle around the elastic.
-                    <span class="title">4. Use hairpins to secure the bun to your head.</span> Secure the bun to your head using U-shaped hair pins not bobby pins to grab hair from the top of your bun.
-                    <span class="title">5. Wrap the hair net around the bun and secure with more pins to secure all the loose hairs.</span> Cover your bun with a hair net that matches your hair color to keep all wisps and stray hairs in place.
-                    <span class="title">6. Use hairspray, gel, or bobby pins / clips to tame the loose hairs away from your face.</span> For an extra hold and overall neat look, use hairspray to slick all the loose wisps or fizz from your hairline flat on the head.</P>             
+                    <p>A ballet bun is quite simple to do. With a little practice, you will get the perfect “cinnamon bun”.</p>
+                    <ol>
+                        <li><span class="title"> Brush your hair.</span>To start, get your hair free of tangles.</li>
+                        <li><span class="title"> Pull your hair back into a ponytail and secure with an elastic.</span></li>
+                        <li><span class="title"> Twist the bun into a rope and wrap the rope in a circle around the elastic.</span>Wrap the rope around in a circle around the elastic.</li>
+                        <li><span class="title"> Use hairpins to secure the bun to your head.</span> Secure the bun to your head using U-shaped hair pins not bobby pins to grab hair from the top of your bun.</li>
+                        <li><span class="title"> Wrap the hair net around the bun and secure with more pins to secure all the loose hairs.</span> Cover your bun with a hair net that matches your hair color to keep all wisps and stray hairs in place.</li>
+                        <li><span class="title"> Use hairspray, gel, or bobby pins / clips to tame the loose hairs away from your face.</span> For an extra hold and overall neat look, use hairspray to slick all the loose wisps or fizz from your hairline flat on the head.</li>            
+                    </ol>
                 </div>
             </section>
             <section class="shoes">
-                <div class="shoes-img">
+                <figure class="shoes-img">
                     <h3>How to buy shoes</h3>
                     <img src="images/ballet-shoes.jpg" alt="Ballet shoes">
-                    <p class="credit">image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/
-                        <br>Attribution-NonCommercial
-                    </p>
-                </div>
+                    <figcaption>
+                        <p> class="credit">image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/  </p>
+                        <p class="credit">Attribution-NonCommercial </p>
+                    </figcaption>
+                </figure>
                 <div class="shoes-msg">
                     <p>Ballet shoes play an important role for safely practicing ballet movements. 
                         Opt for a pair of Ballet slippers rather than pointe shoes – they’re soft & easy for beginners to wear.
