--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -90,9 +90,9 @@
       </h3>
       <!-- Think about how you want your navigation bar to look. In the site-plan.css file change the colors to your colors to get the look you desire. --> 
       <nav>
-        <a href="#">Home</a>
-        <a href="#">Ballet Attire</a>
-        <a href="#">Ballet Terms</a>
+        <a href="index.html">Home</a>
+        <a href="ballet-attire.html">Ballet Attire</a>
+        <a href="ballet-terms.html">Ballet Terms</a>
       </nav>
       <hr>
       <h2>
@@ -128,46 +128,48 @@
       </h2>
       <h3>Home page</h3>
 
+      <p>You’ve probably heard it, maybe even said it yourself — “ballet is the foundation of all dance forms.”</p>
+      <p>Although ballet can't include all types of dance like</p>
+      <p>the centuries-old traditional/folk dance forms since it is just 400 years old, this word emphasizes “ballet’s strong training structure.”</p>
+      <p>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” </p>
+      <p>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. </p>
+      <p>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. </p>
+      <p>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.</p>
 
-      <p>You’ve probably heard it, maybe even said it yourself — “ballet is the foundation of all dance forms.”
-      <br> Although ballet can't include all types of dance like
-      the centuries-old traditional/folk dance forms since it is just 400 years old, this word emphasizes “ballet’s strong training structure.”
-      <br>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” 
-      <br>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. 
-      <br>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. 
-      <br>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.
       <p>Ballet Benefits</p>
-          <p>1. Improves flexibility: Ballet training involves stretching of many major and minor muscle groups in all parts of the body; legs, arms, torso, back, neck, feet… the list goes on.
-                Through increased stretching with body weight exercises (which are all ballet exercises by the way), muscles become longer, stronger and more resistant to tearing or strain.
-          <br>2. Tones muscles: When you dance, you use so many muscles - to balance, bend, stretch, spring and jump. Each move strengthens and shapes the muscles. This reshaping of our muscles is what we call ‘toning’.
-          <br>3. Improves muscle strength: The legs, back and core are the main muscle groups which will benefit from strengthening though ballet exercises but we also strengthen our arm muscles as well as neck and foot muscles.
-          <br>4. Lengthens muscles: Ballet focus on smaller, postural muscles and a full range of motion - which are great for making lean, well flexed muscles.
-          <br>5. Improves stamina: 60 minute adult ballet class is a great stamina builder. 
-          <br>6. Improves coordination: Working your cognitive functions to coordinate your body with music, will benefit your coordination in other areas of your life. 
-          <br>7. Improves posture: Every single exercise in a ballet class requires us to hold a strong posture and it’s at the core of every position and move.
-                We hold our core/abs strong and back straight whilst breathing through the exercises. Lifting the arms through the various positions allows us to create space in the spine. 
-          <br>8. Increased energy: As we exercise, we increase circulation which works to strengthen the heart muscle. This results in increased energy available for our body - and not just during class, for a long time afterwards too. 
-          <br>9. Great for mindfulness and calming: The music is often beautiful and concentration on the exercises means we are in a sure state of mindfulness.
-          <br>10. Improves concentration: Posture, positioning, turn-out, musicality, timing, counting beats and coordination of arms, legs and feet all require concentration. 
-                  Not to mention remembering what the teacher told you at the start of the exercise and what he / she might be saying during!
-          <br>11. Increases metabolic rate: Ballet will speed up your metabolism Because it is a total body workout, it increases your circulation, breathing rate and muscular activity which all contributes to elevating your metabolism.
-          <br>12. Great for expression: Through our movements we can really feel the music and enjoy it’s nuances. You can use ballet to emote feelings, release stress, enjoy the freedom of movement and really express your mood.
-          <br>13. Improves self confidence: You will get to know your body and what it’s capable of. You’ll surprise yourself with your ability, strength and coordination and your confidence in class will improve.
-          <br>14. Improves balance: Core strength is at the core (excuse the pun) of balance and adult ballet is great for core strength. 
-                  Every time we use our balance, we improve it. We do this by strengthening the muscles required to balance and hold our positions.
-          <br>15. Assists with lymph drainage: Exercise helps to promote lymph drainage which helps with detoxification, muscle and tissue regeneration, reduces inflammation, aids sleep, shifts cellulite and even has anti-aging effects!
-          <br>16. Releases endorphins: It’s been proven that ballet (and other forms of dance) release more endorphins than other forms of aerobic exercise.
-          <br>17. Improves breathing: Breathing during ballet is important. Breathing properly is essential for muscle health, circulation, flexibility and fluidity.
-          <br>18. Burns calories: In a typical 60 minute ballet class, you will burn 300 to 400 calories.
-          <br>19. Fends off dementia: Ballet is a mental workout as well as a physical one and this helps our minds stay sharp and elastic.
-          <br>20. Keeps bones strong: Because ballet is a weight-bearing exercise, it helps bones to grow healthy and increase in strength.  </p>    
+
+        <p>1. Improves flexibility: Ballet training involves stretching of many major and minor muscle groups in all parts of the body; legs, arms, torso, back, neck, feet… the list goes on.
+              Through increased stretching with body weight exercises (which are all ballet exercises by the way), muscles become longer, stronger and more resistant to tearing or strain.</p>
+        <p>2. Tones muscles: When you dance, you use so many muscles - to balance, bend, stretch, spring and jump. Each move strengthens and shapes the muscles. This reshaping of our muscles is what we call ‘toning’.</p>
+        <p>3. Improves muscle strength: The legs, back and core are the main muscle groups which will benefit from strengthening though ballet exercises but we also strengthen our arm muscles as well as neck and foot muscles.</p>
+        <p>4. Lengthens muscles: Ballet focus on smaller, postural muscles and a full range of motion - which are great for making lean, well flexed muscles.</p>
+        <p>5. Improves stamina: 60 minute adult ballet class is a great stamina builder. </p>
+        <p>6. Improves coordination: Working your cognitive functions to coordinate your body with music, will benefit your coordination in other areas of your life. </p>
+        <p>7. Improves posture: Every single exercise in a ballet class requires us to hold a strong posture and it’s at the core of every position and move.
+              We hold our core/abs strong and back straight whilst breathing through the exercises. Lifting the arms through the various positions allows us to create space in the spine. </p>
+        <p>8. Increased energy: As we exercise, we increase circulation which works to strengthen the heart muscle. This results in increased energy available for our body - and not just during class, for a long time afterwards too. </p>
+        <p>9. Great for mindfulness and calming: The music is often beautiful and concentration on the exercises means we are in a sure state of mindfulness.</p>
+        <p>10. Improves concentration: Posture, positioning, turn-out, musicality, timing, counting beats and coordination of arms, legs and feet all require concentration. 
+                Not to mention remembering what the teacher told you at the start of the exercise and what he / she might be saying during!</p>
+        <p>11. Increases metabolic rate: Ballet will speed up your metabolism Because it is a total body workout, it increases your circulation, breathing rate and muscular activity which all contributes to elevating your metabolism.</p>
+        <p>12. Great for expression: Through our movements we can really feel the music and enjoy it’s nuances. You can use ballet to emote feelings, release stress, enjoy the freedom of movement and really express your mood.</p>
+        <p>13. Improves self confidence: You will get to know your body and what it’s capable of. You’ll surprise yourself with your ability, strength and coordination and your confidence in class will improve.</p>
+        <p>14. Improves balance: Core strength is at the core (excuse the pun) of balance and adult ballet is great for core strength. 
+                Every time we use our balance, we improve it. We do this by strengthening the muscles required to balance and hold our positions.</p>
+        <p>15. Assists with lymph drainage: Exercise helps to promote lymph drainage which helps with detoxification, muscle and tissue regeneration, reduces inflammation, aids sleep, shifts cellulite and even has anti-aging effects!</p>
+        <p>16. Releases endorphins: It’s been proven that ballet (and other forms of dance) release more endorphins than other forms of aerobic exercise.</p>
+        <p>17. Improves breathing: Breathing during ballet is important. Breathing properly is essential for muscle health, circulation, flexibility and fluidity.</p>
+        <p>18. Burns calories: In a typical 60 minute ballet class, you will burn 300 to 400 calories.</p>
+        <p> Fends off dementia: Ballet is a mental workout as well as a physical one and this helps our minds stay sharp and elastic.</p>
+        <p> Keeps bones strong: Because ballet is a weight-bearing exercise, it helps bones to grow healthy and increase in strength.</p> 
 
         <p>Images for the Home page</p>
+        <figure>
           <img src="images/adult-ballet.jpg" alt="image for homepage">
-          <br>image credit: Saundi Wilson
-          <br>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  
-          <br>https://creativecommons.org/licenses/by-nc-sa/2.0/  
-    
+          <figcaption>image credit: Saundi Wilson </figcaption>
+          <blockquote>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </blockquote>
+          <blockquote>https://creativecommons.org/licenses/by-nc-sa/2.0/  </blockquote>
+        </figure>
           <hr>
 
       <h3>Ballet attire</h3>
@@ -199,19 +201,21 @@
         <br>Satin ones are preferred for performances but the least durable.</p>
 
       <p>Images for the Page 2</p>
+      <figure>
         <img src="images/ballet-attire.png" alt="image for page2">
-        <br>image credit: https://www.dance10.org/about/dress-code/ballet-classes/
-        <br>Attribution-NonCommercial
-
+        <figcaption>credit: https://www.dance10.org/about/dress-code/ballet-classes/</figcaption>
+        <blockquote>Attribution-NonCommercial> </blockquote>
+      </figure>
+      <figure>
         <img src="images/ballet-bun.png" alt="Ballet bun">
-        <br>image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun
-        <br>Attribution-NonCommercial
-
-
+        <figcaption>image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun </figcaption>
+        <blockquote>Attribution-NonCommercial </blockquote>
+      </figure>
+      <figure>    
         <img src="images/ballet-shoes.jpg" alt="image for page2">
-        <br>image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/
-        <br>Attribution-NonCommercial
-
+        <figcaption>image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/ </figcaption>
+        <blockquote>Attribution-NonCommercial </blockquote>
+      </figure>
     <!-- </ul> -->
       <hr>
     <!-- <ul> -->
@@ -302,7 +306,9 @@
         <img src="images/sautes.JPG" alt="Sautés">
         <br>image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c
         <br>Attribution-NonCommercial
-        <img src="images/ballet.JPG" alt="Ballet Music">
+        <img src="images/ballet.JPG" alt="Ballerina1">
+        <img src="images/ballerina.jpg" alt="Ballerina2">
+        <img src="images/ballerinas.jpg" alt="Ballerina3">
 
     <!-- </ul> -->
       <hr>
