--- a/ballet/index.html
+++ b/ballet/index.html
@@ -17,61 +17,62 @@
                 <a href="index.html">Home</a>
                 <a href="ballet-attire.html">Ballet Attire</a>
                 <a href="ballet-terms.html">Ballet Terms</a>
-                <a href="contactus.html">Contact Us</a>
             </nav>
         </header>
         <div id="hero">
             <div id="hero-box">
                 <img id="hero-img" src="images/adult-ballet.jpg" alt="Adule Ballet">
             </div>
-            <section id="hero-msg">
-                <h1 class="home-title">You’ve probably heard it, maybe even said it yourself — </h1>
-                <h4>“ballet is the foundation of all dance forms.”</h4>
-                <p class="credit"> image credit: Saundi Wilson
-                    <br>Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  
-                    <br>https://creativecommons.org/licenses/by-nc-sa/2.0/  
-                </p>
-            </section>
+            <figure id="hero-msg">
+                <h5 class="home-title">You’ve probably heard it, maybe even said it yourself — </h5>
+                <p class="firstletter">“ballet is the foundation of all dance forms.”</p>
+                <figcaption class="credit"> image credit: Saundi Wilson 
+                    <p class="credit">Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </p>
+                    <p class="credit">https://creativecommons.org/licenses/by-nc-sa/2.0/  </p>
+                </figcaption>
+            </figure>
+
+
         </div>
         <main class="home-grid">
             <section class="fundation">
-            <div class="fundation-ballet">
-                <h1>Ballet the Fundation</h1>
-                <p>Although ballet can't include all types of dance like the centuries-old traditional/folk dance forms since it is just 400 years old, this word emphasizes “ballet’s strong training structure.”</p>
-                <p>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” </p>
-                <p>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. </p>
-                <p>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. </p>
-                <p>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.</p>
-            </div>
+                <div class="fundation-ballet">
+                    <h1>Ballet the Fundation</h1>
+                    <p>Although ballet can't include all types of dance like the centuries-old traditional/folk dance forms since it is just 400 years old, this word emphasizes “ballet’s strong training structure.”</p>
+                    <p>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” </p>
+                    <p>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. </p>
+                    <p>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. </p>
+                    <p>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.</p>
+                </div>
             </section>
             <section class="benefits">
-            <div class="benefits-ballet">
-                <h2>Ballet Benefits</h2>
-                <p><span class="firstletter">1. Improves flexibility:</span></p><p> Ballet training involves stretching of many major and minor muscle groups in all parts of the body; legs, arms, torso, back, neck, feet… the list goes on.
-                Through increased stretching with body weight exercises (which are all ballet exercises by the way), muscles become longer, stronger and more resistant to tearing or strain.</p>
-                <p><span class="firstletter">2. Tones muscles:</span></p><p> When you dance, you use so many muscles - to balance, bend, stretch, spring and jump. Each move strengthens and shapes the muscles. This reshaping of our muscles is what we call ‘toning’.</p>
-                <p><span class="firstletter">3. Improves muscle strength:</span></p><p> The legs, back and core are the main muscle groups which will benefit from strengthening though ballet exercises but we also strengthen our arm muscles as well as neck and foot muscles.</p>
-                <p><span class="firstletter">4. Lengthens muscles:</span></p><p> Ballet focus on smaller, postural muscles and a full range of motion - which are great for making lean, well flexed muscles.</p>
-                <p><span class="firstletter">5. Improves stamina:</span></p><p> 60 minute adult ballet class is a great stamina builder. </p>
-                <p><span class="firstletter">6. Improves coordination:</span></p><p> Working your cognitive functions to coordinate your body with music, will benefit your coordination in other areas of your life. </p>
-                <p><span class="firstletter">7. Improves posture:</span></p><p> Every single exercise in a ballet class requires us to hold a strong posture and it’s at the core of every position and move.
-                We hold our core/abs strong and back straight whilst peathing through the exercises. Lifting the arms through the various positions allows us to create space in the spine. </p>
-                <p><span class="firstletter">8. Increased energy:</span></p><p> As we exercise, we increase circulation which works to strengthen the heart muscle. This results in increased energy available for our body - and not just during class, for a long time afterwards too. </p>
-                <p><span class="firstletter">9. Great for mindfulness and calming:</span></p><p> The music is often beautiful and concentration on the exercises means we are in a sure state of mindfulness.</p>
-                <p><span class="firstletter">10. Improves concentration:</span></p><p> Posture, positioning, turn-out, musicality, timing, counting beats and coordination of arms, legs and feet all require concentration. 
-                Not to mention remembering what the teacher told you at the start of the exercise and what he / she might be saying during!</p>
-                <p><span class="firstletter">11. Increases metabolic rate:</span></p><p> Ballet will speed up your metabolism Because it is a total body workout, it increases your circulation, peathing rate and muscular activity which all contributes to elevating your metabolism.</p>
-                <p><span class="firstletter">12. Great for expression:</span></p><p> Through our movements we can really feel the music and enjoy it’s nuances. You can use ballet to emote feelings, release stress, enjoy the freedom of movement and really express your mood.</p>
-                <p><span class="firstletter">13. Improves self confidence:</span></p><p> You will get to know your body and what it’s capable of. You’ll surprise yourself with your ability, strength and coordination and your confidence in class will improve.</p>
-                <p><span class="firstletter">14. Improves balance:</span></p><p> Core strength is at the core (excuse the pun) of balance and adult ballet is great for core strength. 
-                Every time we use our balance, we improve it. We do this by strengthening the muscles required to balance and hold our positions.</p>
-                <p><span class="firstletter">15. Assists with lymph drainage:</span></p><p> Exercise helps to promote lymph drainage which helps with detoxification, muscle and tissue regeneration, reduces inflammation, aids sleep, shifts cellulite and even has anti-aging effects!</p>
-                <p><span class="firstletter">16. Releases endorphins:</span></p><p> It’s been proven that ballet (and other forms of dance) release more endorphins than other forms of aerobic exercise.</p>
-                <p><span class="firstletter">17. Improves peathing:</span></p><p> peathing during ballet is important. peathing properly is essential for muscle health, circulation, flexibility and fluidity.</p>
-                <p><span class="firstletter">18. Burns calories:</span></p><p> In a typical 60 minute ballet class, you will burn 300 to 400 calories.</p>
-                <p><span class="firstletter">19. Fends off dementia:</span></p><p> Ballet is a mental workout as well as a physical one and this helps our minds stay sharp and elastic.</p>
-                <p><span class="firstletter">20. Keeps bones strong:</span></p><p> Because ballet is a weight-bearing exercise, it helps bones to grow healthy and increase in strength.  </p> 
-            </div>
+                <div class="benefits-ballet">
+                    <h2>Ballet Benefits</h2>
+                    <p><span class="firstletter">1. Improves flexibility:</span></p><p> Ballet training involves stretching of many major and minor muscle groups in all parts of the body; legs, arms, torso, back, neck, feet… the list goes on.
+                    Through increased stretching with body weight exercises (which are all ballet exercises by the way), muscles become longer, stronger and more resistant to tearing or strain.</p>
+                    <p><span class="firstletter">2. Tones muscles:</span></p><p> When you dance, you use so many muscles - to balance, bend, stretch, spring and jump. Each move strengthens and shapes the muscles. This reshaping of our muscles is what we call ‘toning’.</p>
+                    <p><span class="firstletter">3. Improves muscle strength:</span></p><p> The legs, back and core are the main muscle groups which will benefit from strengthening though ballet exercises but we also strengthen our arm muscles as well as neck and foot muscles.</p>
+                    <p><span class="firstletter">4. Lengthens muscles:</span></p><p> Ballet focus on smaller, postural muscles and a full range of motion - which are great for making lean, well flexed muscles.</p>
+                    <p><span class="firstletter">5. Improves stamina:</span></p><p> 60 minute adult ballet class is a great stamina builder. </p>
+                    <p><span class="firstletter">6. Improves coordination:</span></p><p> Working your cognitive functions to coordinate your body with music, will benefit your coordination in other areas of your life. </p>
+                    <p><span class="firstletter">7. Improves posture:</span></p><p> Every single exercise in a ballet class requires us to hold a strong posture and it’s at the core of every position and move.
+                    We hold our core/abs strong and back straight whilst peathing through the exercises. Lifting the arms through the various positions allows us to create space in the spine. </p>
+                    <p><span class="firstletter">8. Increased energy:</span></p><p> As we exercise, we increase circulation which works to strengthen the heart muscle. This results in increased energy available for our body - and not just during class, for a long time afterwards too. </p>
+                    <p><span class="firstletter">9. Great for mindfulness and calming:</span></p><p> The music is often beautiful and concentration on the exercises means we are in a sure state of mindfulness.</p>
+                    <p><span class="firstletter">10. Improves concentration:</span></p><p> Posture, positioning, turn-out, musicality, timing, counting beats and coordination of arms, legs and feet all require concentration. 
+                    Not to mention remembering what the teacher told you at the start of the exercise and what he / she might be saying during!</p>
+                    <p><span class="firstletter">11. Increases metabolic rate:</span></p><p> Ballet will speed up your metabolism Because it is a total body workout, it increases your circulation, peathing rate and muscular activity which all contributes to elevating your metabolism.</p>
+                    <p><span class="firstletter">12. Great for expression:</span></p><p> Through our movements we can really feel the music and enjoy it’s nuances. You can use ballet to emote feelings, release stress, enjoy the freedom of movement and really express your mood.</p>
+                    <p><span class="firstletter">13. Improves self confidence:</span></p><p> You will get to know your body and what it’s capable of. You’ll surprise yourself with your ability, strength and coordination and your confidence in class will improve.</p>
+                    <p><span class="firstletter">14. Improves balance:</span></p><p> Core strength is at the core (excuse the pun) of balance and adult ballet is great for core strength. 
+                    Every time we use our balance, we improve it. We do this by strengthening the muscles required to balance and hold our positions.</p>
+                    <p><span class="firstletter">15. Assists with lymph drainage:</span></p><p> Exercise helps to promote lymph drainage which helps with detoxification, muscle and tissue regeneration, reduces inflammation, aids sleep, shifts cellulite and even has anti-aging effects!</p>
+                    <p><span class="firstletter">16. Releases endorphins:</span></p><p> It’s been proven that ballet (and other forms of dance) release more endorphins than other forms of aerobic exercise.</p>
+                    <p><span class="firstletter">17. Improves peathing:</span></p><p> peathing during ballet is important. peathing properly is essential for muscle health, circulation, flexibility and fluidity.</p>
+                    <p><span class="firstletter">18. Burns calories:</span></p><p> In a typical 60 minute ballet class, you will burn 300 to 400 calories.</p>
+                    <p><span class="firstletter">19. Fends off dementia:</span></p><p> Ballet is a mental workout as well as a physical one and this helps our minds stay sharp and elastic.</p>
+                    <p><span class="firstletter">20. Keeps bones strong:</span></p><p> Because ballet is a weight-bearing exercise, it helps bones to grow healthy and increase in strength.  </p> 
+                </div>
             </section>
 
         </main>
