added to my homepage

--- a/ballet/ballet-attire.html
+++ b/ballet/ballet-attire.html
@@ -87,7 +87,7 @@
                     <h3>How to buy shoes</h3>
                     <img src="images/ballet-shoes.jpg" alt="Ballet shoes">
                     <figcaption>
-                        <p> class="credit">image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/  </p>
+                        <p class="credit">image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/  </p>
                         <p class="credit">Attribution-NonCommercial </p>
                     </figcaption>
                 </figure>
