--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -239,7 +239,7 @@
         <footer>
             <p>Adult Ballet &copy; 2023 - Sin Yi Lin</p>
             <p><a href="site-plan.html">Site Plan</a></p>
-            <p><a href="contactus.html">Contact Us</a></p>
+            <!-- <p><a href="contactus.html">Contact Us</a></p> -->
             <div class="social">
                 <a href="https://facebook.com" target="_blank">
                     <img src="images/facebook.png" alt="fb icon">
