--- a/ballet/ballet-attire.html
+++ b/ballet/ballet-attire.html
@@ -53,12 +53,12 @@
                 </figure>
                 <div class="dress-msg">
                     <h1>Ballet attire</h1>            
-                    <p><span class="title">First, </span></p><p>you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
+                    <p><span class="title">First, </span>you can choose to wear a leggings with a cap sleeve or sleeveless tops shown as the above home image, or tights with a leotard and a sheer wrap skirt shown as the right image.
                     The dress code is you have to make room for better flexibility, plus it also helps minimise the risk of sustaining injury by keeping the leg muscles warm. 
                     Moreover, it will make your teachers see your alignment, allowing them to correct the next steps compared to baggy clothes, hiding poor practices.</p>
-                    <P><span class="title">Second, </span></p><p>don't wear jewelry or a wristwatch to dance class since it may fly off while you are moving and hit someone. Additionally, it impair technique.</P>
-                    <P><span class="title">Third, </span></p><p>choose a suitable soft ballet shoes if you are a beginner.</P>
-                    <P><span class="title">Fourth, </span></p><p>tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
+                    <P><span class="title">Second, </span>don't wear jewelry or a wristwatch to dance class since it may fly off while you are moving and hit someone. Additionally, it impair technique.</P>
+                    <P><span class="title">Third, </span>choose a suitable soft ballet shoes if you are a beginner.</P>
+                    <P><span class="title">Fourth, </span>tie your hair secured back and off the face to avoid interfering with steps like pirouettes or jumps. </P>
                 </div>
             </section>
             <section class="bun">
