added to my homepage

--- a/ballet/ballet-attire.html
+++ b/ballet/ballet-attire.html
@@ -28,7 +28,7 @@
                 <p class="firstletter">“ballet is the foundation of all dance forms.”</p>
                 <figcaption class="credit"> image credit: Saundi Wilson 
                     <p class="credit">Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </p>
-                    <p class="credit">https://creativecommons.org/licenses/by-nc-sa/2.0/  </p>
+                    <p class="credit">https://reurl.cc/gDlDyp </p>
                 </figcaption>
             </figure>
         </div>
@@ -47,7 +47,7 @@
                 <figure class="dress-img">
                     <img src="images/ballet-attire.png" alt="Ballet attire">
                     <figcaption>
-                        <p class="credit">image credit: https://www.dance10.org/about/dress-code/ballet-classes </p>
+                        <p class="credit">image credit: https://reurl.cc/VLeLvb </p>
                         <p class="credit">Attribution-NonCommercial</p>
                     </figcaption>
                 </figure>
@@ -66,7 +66,7 @@
                     <h2>How to tie a basic ballet bun</h2>
                     <img src="images/ballet-bun.png" alt="Ballet bun">
                     <figcaption>
-                        <p class="credit">image credit: https://danceworld.ie/blogs/news/how-to-make-a-perfect-ballet-bun </p>
+                        <p class="credit">image credit: https://reurl.cc/M8D8xn </p>
                         <p class="credit">Attribution-NonCommercial</p>
                     </figcaption>
                 </figure>
@@ -87,7 +87,7 @@
                     <h3>How to buy shoes</h3>
                     <img src="images/ballet-shoes.jpg" alt="Ballet shoes">
                     <figcaption>
-                        <p class="credit">image credit: https://movedancewear.com/blog/buying_the_right_ballet_shoe/54/  </p>
+                        <p class="credit">image credit: https://reurl.cc/y7X7N6 </p>
                         <p class="credit">Attribution-NonCommercial </p>
                     </figcaption>
                 </figure>
