--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -28,7 +28,7 @@
                 <p class="firstletter">“ballet is the foundation of all dance forms.”</p>
                 <figcaption class="credit"> image credit: Saundi Wilson 
                     <p class="credit">Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </p>
-                    <p class="credit">https://creativecommons.org/licenses/by-nc-sa/2.0/  </p>
+                    <p class="credit">https://reurl.cc/gDlDyp  </p>
                 </figcaption>
             </figure>
         </div>
@@ -42,7 +42,7 @@
                     <p>Ballet has evolved into a popular and highly professional dance form with its vocabulary. The vocabulary of ballet has mainly stayed in French, and been learned and communicated by ballet professional dancers from all over the universe.
                     There are several terms used in this dance form that define the position,  steps as well as costumes.
                     For more, you can look up the website: 
-                    <a href="https://www.inspireddance.org/dance-terms-and-exercises/dance-ballet-vocabulary?ssp_iabi=1677277102448">Ballet Vocabulary</a>
+                    <a href="https://reurl.cc/N0D0d5">Ballet Vocabulary</a>
                     </p>
                 </section>
             </div>
@@ -50,7 +50,7 @@
                 <figure class="hand-img">
                     <p class="firstletter">Hand Positions</p>
                     <img src="images/hand-positions.png" alt="Hand Positions">
-                    <figcaption class="credit">image credit: https://www.supercoloring.com/coloring-pages/ballet-positions 
+                    <figcaption class="credit">image credit: https://reurl.cc/aVzVYG
                         <p class="credit">Author: Artsashina </p >
                         <p class="credit">Attribution-NonCommercial </p >
                     </figcaption>
@@ -68,7 +68,7 @@
                 <figure class="feet-img">
                     <p class="firstletter">Feet Positions</p>
                     <img src="images/feet-position.png" alt="Feet Positions">
-                    <figcaption class="credit">image credit: https://www.dreamstime.com/ballerina-feet-pointe-shoes-five-ballet-positions-ballerina-feet-pointe-shoes-five-ballet-positions-vector-illustration-eps-image118067397 
+                    <figcaption class="credit">image credit: https://reurl.cc/o7X7M3 
                       <p class="credit">Attribution-NonCommercial </p >
                     </figcaption>        
                 </figure>
@@ -93,7 +93,7 @@
                         <figcaption>
                             <p class="heading">1. Port de bras
                             <img src="images/port-de-bras.JPG" alt="Port de bras">
-                            <p  class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/1/13/9-basic-ballet-terms-benefits </p >
+                            <p  class="credit">image credit: https://reurl.cc/RzDz3z </p >
                             <p  class="credit">Attribution-NonCommercial </p >    
                         </figcaption>
                     </figure>   
@@ -105,7 +105,7 @@
                         <figcaption>
                             <p class="heading">2. Pile </p>
                             <img src="images/pile.jpg" alt="Pile">
-                            <p  class="credit">image credit: https://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs </p >
+                            <p  class="credit">image credit: https://reurl.cc/v7X7RA </p >
                             <p  class="credit">Attribution-NonCommercial </p >   
                         </figcaption>
                     </figure>
@@ -119,7 +119,7 @@
                             <figcaption>
                                 <p class="sub-title">Demi Pile </p>
                                 <img  src="images/demi-plie.png" alt="Demi Pile">
-                                <p  class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs </p >
+                                <p  class="credit">image credit: hhttps://reurl.cc/v7X7RA </p >
                                 <p  class="credit">Attribution-NonCommercial </p >
                             </figcaption>
                         </figure>
@@ -127,7 +127,7 @@
                             <figcaption>
                                 <p class="sub-title">Grand Pile </p>
                                 <img src="images/grand-pile2.jpg" alt="Grand Pile">
-                                <p  class="credit">image credit: hhttps://www.balletbodysculpture.com/blog/2019/3/3/power-your-legs </p >
+                                <p  class="credit">image credit: https://reurl.cc/v7X7RA </p >
                                 <p  class="credit">Attribution-NonCommercial </p >
                             </figcaption>
                         </figure>
@@ -138,7 +138,7 @@
                         <figcaption>
                             <p class="heading">3. Elevés and relevés </p>
                             <img src="images/releve-eleve.JPG" alt="Elevés and relevés">
-                            <p  class="credit">image credit: https://www.pinterest.com/pin/375276581458634368/ </p >
+                            <p  class="credit">image credit: https://reurl.cc/65k5z6 </p >
                             <p  class="credit">Attribution-NonCommercial </p >
                         </figcaption>
                     </figure>          
@@ -150,7 +150,7 @@
                         <figcaption>
                             <p class="heading">4. Tendu </p>
                             <img src="images/tendu2.jpg" alt="Tendu">
-                            <p  class="credit">image credit: https://dance.fandom.com/wiki/Tendu </p >
+                            <p  class="credit">image credit: https://reurl.cc/LADAG9 </p >
                             <p  class="credit">Attribution-NonCommercial </p >
                         </figcaption>
                     </figure>
@@ -166,7 +166,7 @@
                         <figcaption>
                             <p class="heading">5. Dégagés </p>
                             <img src="images/degages.jpg" alt="Dégagés">
-                            <p class="credit">image credit: https://aballeteducation.com/notes-on-degages/ </p >
+                            <p class="credit">image credit: https://reurl.cc/OvDvyA </p >
                             <p class="credit">Attribution-NonCommercial </p >
                         </figcaption>
                     </figure>           
@@ -178,7 +178,7 @@
                         <figcaption>
                             <p class="heading">6. Rond de jambe </p>
                             <img src="images/round.png" alt="Rond de jambe">
-                            <p class="credit">image credit: https://zh-yue.m.wikipedia.org/wiki/File:Santavuori-balettia-kaikille-ronddejambe.png </p >
+                            <p class="credit">image credit: https://reurl.cc/qLXLl0 </p >
                             <p class="credit">Attribution-NonCommercial </p>
                         </figcaption>
                     </figure>          
@@ -190,7 +190,7 @@
                         <figcaption>
                             <p class="heading">7. Sautés </p>
                             <img src="images/sautes.JPG" alt="Sautés">
-                            <p class="credit">image credit: https://www.pinterest.com/pin/809873945477158000/visual-search/?x=0&y=37&w=563&h=382&cropSource=4&full_feed_title=Artwork&imageSignature=ea9a7e52286ab03b7a678f9dd7c8d77c </p >
+                            <p class="credit">image credit: https://reurl.cc/GADA3p</p >
                             <p class="credit">Attribution-NonCommercial </p >
                         </figcaption>
                     </figure>         
