--- a/ballet/index.html
+++ b/ballet/index.html
@@ -28,7 +28,7 @@
                 <p class="firstletter">“ballet is the foundation of all dance forms.”</p>
                 <figcaption class="credit"> image credit: Saundi Wilson 
                     <p class="credit">Attribution-NonCommercial-ShareAlike 2.0 Generic (CC BY-NC-SA 2.0)  </p>
-                    <p class="credit">https://creativecommons.org/licenses/by-nc-sa/2.0/  </p>
+                    <p class="credit">https://reurl.cc/gDlDyp  </p>
                 </figcaption>
             </figure>
 
