--- a/ballet/index.html
+++ b/ballet/index.html
@@ -42,7 +42,7 @@
                     <p>Ballet offers a strict regimen of exercises, and  “a strong gateway into [dance through] understanding “lines, mechanics and musicality.” </p>
                     <p>Therefore, more and more adults come to learn ballet and see it as a weight-bearing form of exercise which strengthens muscles, promotes healthy bones and burns calories. </p>
                     <p>At the same time, ballet is evolving from a noble court dance into an inclusive civilian exercise. </p>
-                    <p>This website is built to help the beginner step into the ballet world by introducing how to dress and explaining the vocabulary.</p>
+                    <p>This website is built to help the beginner step into the ballet world by introducing how to dress, explaining the vocabulary, and music for ballet class.</p>
                 </div>
             </section>
             <section class="benefits">
