--- a/ballet/site-plan.html
+++ b/ballet/site-plan.html
@@ -21,14 +21,14 @@
       <hr>
       <h2>Overview</h2>
       <h3>Purpose</h3>
-      <p>In these days, adult ballet has exploded, and more and more people regard ballet as an exercise, a great workout for the whole body.</p> 
-      <p>There are lots of websites tell about the benefits of adult ballet, but they don’t integrate these information, like how to dress, how to choose the ballet shoes,  
-      explaining the ballet terms, introducing ballet class music, and so on. </p>
-      <p>This website is going to provide the information for the ballet amateurs.</p>  <!-- change this -->
+      <p>This website is built to help the beginner step into the ballet world by introducing how to dress, explaining the vocabulary, and music for ballet class.</p>
+      <p>We hope this information will help them to relieve their stress and anxiety, and have the nerve to kick off their ballet classes.  </p><!-- change this -->
 
 
       <h3>Audience</h3>
-      <p>The adult ballet amateurs.</p>  <!-- change this -->
+      <p>In these days, adult ballet has exploded, and more and more people regard ballet as an exercise, a great workout for the whole body. </p>
+      <p>For those who want to begin ballet classes but are not sure what to expect or how to prepare, there are lots of websites tell about the benefits of adult ballet, </p>
+      <p>but they don’t integrate these information, like how to dress, how to choose the ballet shoes, explaining the ballet terms, introducing ballet class music, and so on. </p>  <!-- change this -->
 
       <hr>
       <h2>Branding</h2>
