added to my homepage

--- a/ballet/ballet-terms.html
+++ b/ballet/ballet-terms.html
@@ -91,7 +91,7 @@
                 <div id="port">
                     <figure class="port-img">
                         <figcaption>
-                            <p class="heading">1. Port de bras
+                            <p class="heading">1. Port de bras</p >
                             <img src="images/port-de-bras.JPG" alt="Port de bras">
                             <p  class="credit">image credit: https://reurl.cc/RzDz3z </p >
                             <p  class="credit">Attribution-NonCommercial </p >    
@@ -154,11 +154,12 @@
                             <p  class="credit">Attribution-NonCommercial </p >
                         </figcaption>
                     </figure>
+                    <p class="tendu-msg">To perform a tendu, French for stretch, begin in either first or fifth position and slowly brush your working foot outward until it rests in a strong point away from you. 
+                        Then, brush your foot back toward you and bring it back to your starting position. Tendus can be done to the front (devant), to the side (à la seconde), 
+                        or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet). 
+                    </P>
                     <div  class="tendu-img2">   
                         <img src="images/tendu.JPG" alt="Tendu2">
-                        <p class="tendu-msg">To perform a tendu, French for stretch, begin in either first or fifth position and slowly brush your working foot outward until it rests in a strong point away from you. 
-                            Then, brush your foot back toward you and bring it back to your starting position. Tendus can be done to the front (devant), to the side (à la seconde), 
-                            or to the back (derriére), and they stretch leg muscles and help improve turnout (outward rotation of your legs and feet). </P>
                     </div>
                 </div>
                 <div id="degages">
